--- a/style.css
+++ b/style.css
@@ -3,3 +3,15 @@
 * {
   box-sizing: border-box;
 }
+
+body {
+  background-color: #f5f5f5;
+  color: #444;
+  font-family: "Poppins", sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  margin: 0;
+}
