--- a/style.css
+++ b/style.css
@@ -28,3 +28,20 @@ form {
   max-width: 100%;
   width: 400px;
 }
+
+.input {
+  border: none;
+  color: #444;
+  font-size: 2rem;
+  padding: 1rem 2rem;
+  display: block;
+  width: 100%;
+}
+
+.input::placeholder {
+  color: #d5d5d5;
+}
+
+.input:focus {
+  outline-color: rgb(179, 131, 226);
+}
