--- a/style.css
+++ b/style.css
@@ -45,3 +45,10 @@ form {
 .input:focus {
   outline-color: rgb(179, 131, 226);
 }
+
+.todos {
+  background-color: #fff;
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
