--- a/style.css
+++ b/style.css
@@ -52,3 +52,15 @@ form {
   margin: 0;
   list-style-type: none;
 }
+
+.todos li {
+  border-top: 1px solid #e5e5e5;
+  cursor: pointer;
+  font-size: 1.5rem;
+  padding: 1rem 2rem;
+}
+
+.todos li.completed {
+  color: #b6b6b6;
+  text-decoration: line-through;
+}
